--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fe5d1cf
-	base = af761e3
-	trim = 
-	trimbase = 
+	base = 7ec652c
+	trim = turtlesim
+	trimbase = af761e3
