--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/turtlesim
-	previous = 
-	base = 7ec652c
+	previous = 7ec652c
+	base = 7a2ee92
 	trim = 
 	trimbase = 
