--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/turtlesim
-	previous = 
-	base = e569be5
+	previous = e569be5
+	base = 4018618
 	trim = 
 	trimbase = 
