--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/turtlesim
-	previous = 
-	base = 10a8815
+	previous = 10a8815
+	base = 0e464b4
 	trim = 
 	trimbase = 
